Fix clone panel z-index

--- a/public/ng/less/gogs/repository.less
+++ b/public/ng/less/gogs/repository.less
@@ -84,6 +84,7 @@ border-top-right-radius: .25em;
 	left: -354px;
 	padding: 20px;
 	box-sizing: border-box;
+	z-index: 1;
 	.btn > i {
 		margin-right: 6px;
 	}
